<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="mine">我的</string>
    <string name="recommend">推荐</string>
    <string name="friend">好友</string>
    <string name="dynamic">动态</string>
    <string name="login_string">登陆您的账户</string>
    <string name="login">立即登陆</string>
    <string name="logout">退出</string>
    <string name="password">密 码:</string>
    <string name="username">用户名:</string>
    <string name="pre_music">上一曲</string>
    <string name="circulate">循环</string>
    <string name="circulateOne">单曲循环</string>
    <string name="suiji">随机播放</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="next_music">下一曲</string>
    <string name="list">列表</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_widget_configure">WidgetConfigureActivity</string>
    <string name="submit">提交</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="setting">设置</string>
    <string name="shotDown">退出</string>
    <string name="myMsg">我的消息</string>
    <string name="skin">个性换肤</string>
    <string name="timeOutShot">定时关闭</string>
    <string name="create">创建</string>
    <string name="cancel">取消</string>
    <string name="createString">新建歌单</string>
    <string name="createListString">请输入歌单标题</string>
    <string name="edit_song_list">编辑歌单信息</string>
    <string name="downLoad">下载</string>
    <string name="delete">删除</string>
    <string name="change_cover">更换封面</string>
    <string name="name">名称</string>
    <string name="introduce">简介</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="share">FoxLuo播放器</string>
</resources>
