<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/colorPrimary"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <TextView
        android:id="@+id/show_song_list_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:textSize="14dp"
        android:textColor="@color/dark_gray"
        android:text="" />

    <LinearLayout
        android:id="@+id/down_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/item_press"
        android:clickable="true"
        android:focusable="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_margin="12dp"
            app:srcCompat="@drawable/down2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black"
            android:textSize="16dp"
            android:layout_weight="1"
            android:text="@string/downLoad" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/item_press"
        android:clickable="true"
        android:focusable="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_margin="12dp"
            app:srcCompat="@drawable/edit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_black"
            android:textSize="16dp"
            android:text="@string/edit_song_list" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/del_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/item_press"
        android:clickable="true"
        android:focusable="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_margin="12dp"
            app:srcCompat="@drawable/delete1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_black"
            android:textSize="16dp"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>