<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/drawerLayout"
    tools:context=".ui.activity.HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/show_drawer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/btn_press_bg"
                android:clickable="true"
                android:gravity="center"
                android:onClick="doClick"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/more3" />
            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/home_tab_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:tabBackground="@drawable/btn_press_bg"
                app:tabIndicatorHeight="0dp"
                app:tabSelectedTextColor="@color/text_black"
                app:tabTextColor="@color/whiteSmoke">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/mine" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/recommend" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/friend"></com.google.android.material.tabs.TabItem>

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dynamic" />
            </com.google.android.material.tabs.TabLayout>

            <LinearLayout
                android:id="@+id/search_view"
                android:onClick="doClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/btn_press_bg"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/search1" />
            </LinearLayout>

        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/main_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_weight="1"></androidx.viewpager.widget.ViewPager>

        <FrameLayout
            android:id="@+id/music_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:tag="left">

        <include
            layout="@layout/activity_home_more_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </FrameLayout>
</androidx.drawerlayout.widget.DrawerLayout>