<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/text_black">

                    <LinearLayout
                        android:id="@+id/show_user_view"
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:visibility="gone"
                        android:layout_alignParentStart="true"
                        android:layout_centerHorizontal="false"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="40dp"
                        android:gravity="left"
                        android:orientation="vertical">

                        <com.example.musicplayerdome.ui.component.CircleImageView
                            android:id="@+id/imageView2"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            app:srcCompat="@drawable/music" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical|left"
                            android:paddingLeft="10dp"
                            android:text="用户名"
                            android:textColor="@color/colorPrimaryDark" />
                    </LinearLayout>
                    <RelativeLayout
                        android:id="@+id/show_login_view"
                        android:layout_width="match_parent"
                        android:layout_height="200dp">
                        <Button
                            android:id="@+id/button3"
                            android:layout_width="140dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/home_login_btn_bg"
                            android:text="@string/login"
                            android:textColor="@color/colorPrimary"
                            android:textSize="13dp" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="17dp"
                            android:layout_above="@+id/button3"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="20dp"
                            android:text="@string/login_string"
                            android:textColor="@color/colorPrimaryDark" />
                    </RelativeLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/btn_press_bg"
                    android:clickable="true"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="14dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_marginHorizontal="11dp"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/message5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/myMsg" />

                    <TextView
                        android:id="@+id/msg_num"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:minWidth="10dp"
                        android:layout_height="18dp"
                        android:paddingHorizontal="6dp"
                        android:background="@drawable/msg_num_bg"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:textSize="10dp"
                        android:text="0" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/style_choice_view"
                    android:onClick="doClick"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/btn_press_bg"
                    android:clickable="true"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginHorizontal="11dp"
                        app:srcCompat="@drawable/skin" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/skin" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/count_down_view"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/btn_press_bg"
                    android:clickable="true"
                    android:focusable="false"
                    android:onClick="doClick"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginHorizontal="11dp"
                        app:srcCompat="@drawable/time1" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/timeOutShot" />

                    <TextView
                        android:id="@+id/count_down_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:onClick="doClick"
                android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:clickable="true"
                android:focusable="false"
                android:background="@drawable/btn_press_bg"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginHorizontal="4dp"
                    app:srcCompat="@drawable/setting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sheet_down"
                android:onClick="doClick"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:clickable="true"
                android:focusable="false"
                android:background="@drawable/btn_press_bg"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginHorizontal="4dp"
                    app:srcCompat="@drawable/shotdown" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shotDown" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>