<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.activity.EditSongListActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content">

        <ImageView
            android:onClick="doClick"
            android:src="@drawable/back2"
            android:gravity="left"
            android:id="@+id/btn_return"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="2dp"
            android:layout_toEndOf="@+id/btn_return"
            android:textSize="17dp"
            android:text="@string/edit_song_list" />
        <LinearLayout
            android:id="@+id/more"
            android:onClick="doClick"
            android:clickable="true"
            android:focusable="false"
            android:background="@drawable/item_press"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/all_choice_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="保存" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGray"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/change_cover_view"
            android:onClick="doClick"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/item_dark_press"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center_vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:text="@string/change_cover" />

            <ImageView
                android:id="@+id/cover_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:src="@drawable/music" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="1dp"
            android:background="@drawable/item_dark_press"
            android:gravity="center_vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/name" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="right"
                android:inputType="textPersonName"
                android:background="@null"
                android:textSize="15dp"
                android:textCursorDrawable="@drawable/edit_text_cursor"
                android:hint="编辑歌单名称"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/edit_introduce_view"
            android:onClick="doClick"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/item_dark_press"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center_vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:textSize="15dp"
                android:text="@string/introduce" />

            <TextView
                android:id="@+id/introduce_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:maxWidth="300dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="编辑简介"
                android:textSize="15dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/show_edit_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <MultiAutoCompleteTextView
                        android:id="@+id/edit_introduce"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@null"
                        android:textCursorDrawable="@drawable/edit_text_cursor"
                        android:hint="编辑歌单简介" />
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <Button
                    android:onClick="doClick"
                    android:id="@+id/cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/home_login_btn_bg"
                    android:layout_marginHorizontal="10dp"
                    android:text="取消" />

                <Button
                    android:onClick="doClick"
                    android:id="@+id/sure_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/home_login_btn_bg"
                    android:layout_marginHorizontal="10dp"
                    android:text="确定" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>